Fix timeline alignment

--- a/public/src/component/Project.css
+++ b/public/src/component/Project.css
@@ -28,6 +28,7 @@
 }
 
 .description {
+    flex: 1;
     max-width: 600px;
     padding-bottom: 20px;
 }
